# test-scene3D-qml

./: .gitignore  CMakeLists.txt  Connector.qml  OssiaImpulse.cpp  OssiaImpulse.hpp  OssiaProperty.cpp  OssiaProperty.hpp  QMLOssiaPlugin.cpp  QMLOssiaPlugin.hpp  Scene.qml  main.cpp  main.qml  publisher.cpp  publisher.h  resources.qrc  transmitter.cpp  transmitter.h
Center/: Character.qml  Scene.qml  main.qml  resources_Center.qrc
Left/: Scene.qml  SingleShot.qml  main.qml  resources_Left.qrc
MiddleCenter/: Character.qml  Scene.qml  SingleShot.qml  main.qml
Right/: Scene.qml  main.qml
TopCenter/: Character.qml  Scene.qml  main.qml
TopLeft/: Scene.qml  main.qml
